src/test/deca/syntax/valid/vis_class_01.deca
// Description:
//    Programme testant la déclaration de champ dans une classe.
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023

class A {
    protected int x = 1;
}