src/test/deca/syntax/invalid/class_field_vis_pars_01.deca
// Description:
//    Programme testant la déclaration d'une méthode .
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 13/01/2023

class A {
    private int x;
}